tests/paczka1/fuzzy1/13424951.err
Error in line 1: A388 S970 35,3
Error in line 3: RAlJ2wP7ZqI A717 14,10
Error in line 2: A388 A388 23,1
Error in line 4: A388 A717 65,3
Error in line 15: RAlJ2wP7ZqI A388 97,5
Error in line 18: K01roL S970 92,8
Error in line 16: TJRh A397 18,2
Error in line 27: A388 A388 42,5
